# aix-framework

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  debug_db.py  install.sh  pyproject.toml  report.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: aix.rb
aix/: __init__.py  cli.py
aix/core/: __init__.py  ai_engine.py  chain.py  connector.py  context.py  conversation.py  evaluator.py  evasion.py  owasp.py  playbook.py  reporter.py  request_parser.py  scanner.py  turn_evaluator.py  visualizer.py
aix/core/chain_engine/: __init__.py  context.py  executor.py  playbook.py
aix/core/reporting/: __init__.py  base.py  chain.py  visualizer.py
aix/db/: __init__.py  database.py
aix/modules/: __init__.py  agent.py  chain.py  dos.py  exfil.py  extract.py  fingerprint.py  fuzz.py  inject.py  intercept.py  jailbreak.py  leak.py  memory.py  multiturn.py  rag.py  recon.py
aix/payloads/: agent.json  dos.json  exfil.json  extract.json  fingerprint_embeddings.json  fingerprint_probes.json  fuzz.json  inject.json  jailbreak.json  leak.json  memory.json  multiturn.json  rag.json  recon.json  recon_config.json
aix/playbooks/: quick_scan.yaml
aix/prompts/: context_gathering.txt  evaluator_contextual.txt
aix/utils/: cli.py  enroll_fingerprint.py
debian/: aix.install  changelog  control  copyright  rules
tests/: test_aix.py  test_cli.py  test_connector.py  test_context.py  test_database.py  test_fingerprint_embedding.py  test_modules.py  test_multiturn.py  test_payloads.py  test_reporter.py  test_request_parser.py  test_scanner.py
