[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aix-framework"
version = "1.0.0"
description = "AIX - AI eXploit Framework: The first comprehensive AI/LLM security testing tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AIX Team", email = "aix@example.com"}
]
keywords = [
    "ai", "llm", "security", "pentesting", "red-team", 
    "prompt-injection", "jailbreak", "ai-security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]

full = [
    "mitmproxy>=10.0.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aix = "aix.cli:main"

[project.urls]
Homepage = "https://github.com/aix-framework/aix"
Documentation = "https://github.com/aix-framework/aix#readme"
Repository = "https://github.com/aix-framework/aix"
Issues = "https://github.com/aix-framework/aix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aix*"]

[tool.setuptools.package-data]
"aix.payloads" = ["*.json"]
"aix.prompts" = ["*.txt"]


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "E701", "B904", "B007", "B905"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
